<?xml version="1.0"?>
<package format="2">
  <name>memory_leak</name>
  <version>0.0.1</version>
  <description>a testbed for finding memory leaks</description>

  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
  <author email="mike@picknik.ai">Mike Lautman</author>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/memory_leak</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/memory_leak/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/memory_leak/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rospy</depend>
  <depend>eigen</depend>
  <depend>rosconsole</depend>
  <depend version_eq="3.9">clang-format</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
